# wear

./: .gitignore  Cargo.toml  schema.sql
.github/: README.md
.github/workflows/: rust.yml
src/: db.rs  location.rs  main.rs  template.rs  utils.rs
src/db/: mod.rs  schema.sql
src/static/: edit.hbs  edit.html  entry.hbs  form.hbs  index.hbs  index.html  nav.hbs  new.hbs  styles.css
