[package]
name = "wear"
version = "0.1.0"
authors = ["George Kaplan <george@georgekaplan.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
handlebars = "2.0.2"
serde_json = "1.0.41"
serde = { version = "1.0.102", features = ["derive"] }
chrono = { version = "0.4.9", features = ["serde"] }
